breed_rabbits() & foxes_hunt_and_breed() ok

--- a/rabbits_and_foxes.ipynb
+++ b/rabbits_and_foxes.ipynb
@@ -120,12 +120,12 @@
    "metadata": {},
    "source": [
     "## Rabbit Strategies\n",
-    "* clockwise_move()"
+    "* clockwise_escape()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,13 +138,13 @@
     "# 7   3\n",
     "# 6 5 4\n",
     "\n",
-    "def clockwise_move(f, preferred_direction, clockwise):\n",
+    "def clockwise_escape(f, preferred_direction, clockwise):\n",
     "    neighbors = get_neighbors(preferred_direction, clockwise)\n",
     "    if not ( f[preferred_direction] \n",
     "            or f[neighbors[0]] \n",
     "            or f[neighbors[1]] ):\n",
     "        return preferred_direction # safe from visible foxes\n",
-    "    \n",
+    "\n",
     "    current_direction = preferred_direction\n",
     "    evaluated_safer_directions = 1\n",
     "    while evaluated_safer_directions < 8:\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +190,13 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clockwise_move([10, 0, 1, 1, 3, 1, 0, 2], 5, False)"
+    "clockwise_escape([10, 0, 1, 1, 3, 1, 0, 2], 5, False)"
    ]
   },
   {
@@ -205,12 +205,12 @@
    "metadata": {},
    "source": [
     "## Fox Strategies\n",
-    "* hunting_1"
+    "* chasing_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
     "# 6 5 4\n",
     "\n",
     "\n",
-    "def hunting_1(r, preferred_direction, clockwise, diagonal_prediction):\n",
+    "def chasing_1(r, preferred_direction, clockwise, diagonal_prediction):\n",
     "    if not( np.any(r) ):\n",
     "        return preferred_direction\n",
     "    best_direction = np.argmax(r)\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,28 +257,7 @@
     "# 6 5 4\n",
     "r = [0, 0, 2, 0, 0, 0, 0, 1]\n",
     "\n",
-    "hunting_1(r, 0, True, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rabbit_amounts = [0, 0, 1, 3, 4, 1, 0, 0]\n",
-    "hunting_1(rabbit_amounts, 2, clockwise = True, diagonal_prediction = True)"
+    "chasing_1(r, 0, True, False)"
    ]
   },
   {
@@ -289,10 +268,31 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
      "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rabbit_amounts = [0, 0, 1, 3, 4, 1, 0, 0]\n",
+    "chasing_1(rabbit_amounts, 2, clockwise = True, diagonal_prediction = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "        [22, 23]]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,6 +405,11 @@
     "\n",
     "def get_animals_around(grid, row, col, animal):\n",
     "\n",
+    "    if animal == \"rabbits\":\n",
+    "        animal_index = 0\n",
+    "    elif animal == \"foxes\":\n",
+    "        animal_index = 1\n",
+    "\n",
     "    height, width = grid.shape[:2]\n",
     "    if valid_position(row, col, grid.shape) != (row, col):\n",
     "        print(\"Invalid position: ({}, {})\".format(row, col))\n",
@@ -414,40 +419,24 @@
     "    \n",
     "    for i in range(3):\n",
     "        valid_row, valid_col = valid_position(row - 1, col - 1 + i, grid.shape)\n",
-    "        if animal == \"rabbits\":\n",
-    "            map[i] = grid[valid_row, valid_col, 0]\n",
-    "        elif animal == \"foxes\":\n",
-    "            map[i] = grid[valid_row, valid_col, 1]\n",
-    "    \n",
-    "    \n",
+    "        map[i] = grid[valid_row, valid_col, animal_index]\n",
+    "      \n",
     "    valid_row, valid_col = valid_position(row, col + 1, grid.shape)\n",
-    "    if animal == \"rabbits\":\n",
-    "        map[3] = grid[valid_row, valid_col, 0]\n",
-    "    elif animal == \"foxes\":\n",
-    "        map[3] = grid[valid_row, valid_col, 1]\n",
-    "    \n",
+    "    map[3] = grid[valid_row, valid_col, animal_index]    \n",
     "\n",
     "    for i in range(3):\n",
     "        valid_row, valid_col = valid_position(row + 1, col + 1 - i, grid.shape)\n",
-    "        if animal == \"rabbits\":\n",
-    "            map[4 + i] = grid[valid_row, valid_col, 0]\n",
-    "        elif animal == \"foxes\":\n",
-    "            map[4 + i] = grid[valid_row, valid_col, 1]\n",
-    "    \n",
+    "        map[4 + i] = grid[valid_row, valid_col, animal_index]    \n",
     "    \n",
     "    valid_row, valid_col = valid_position(row, col - 1, grid.shape)\n",
-    "    if animal == \"rabbits\":\n",
-    "        map[7] = grid[valid_row, valid_col, 0]\n",
-    "    elif animal == \"foxes\":\n",
-    "        map[7] = grid[valid_row, valid_col, 1]\n",
-    "\n",
+    "    map[7] = grid[valid_row, valid_col, animal_index]\n",
     "\n",
     "    return map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +445,7 @@
        "array([12, 14,  8, 16,  0,  6,  4, 20])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,12 +471,291 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evolutive Algorithm"
+    "# Evolution"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## breed_rabbits()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1],\n",
+       "        [ 2,  3],\n",
+       "        [ 4,  5],\n",
+       "        [ 6,  7]],\n",
+       "\n",
+       "       [[ 8,  9],\n",
+       "        [10, 11],\n",
+       "        [12, 13],\n",
+       "        [14, 15]],\n",
+       "\n",
+       "       [[16, 17],\n",
+       "        [18, 19],\n",
+       "        [20, 21],\n",
+       "        [22, 23]]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [row, column, [rabbits, foxes]]\n",
+    "height = 3\n",
+    "width = 4\n",
+    "\n",
+    "grid = np.zeros((height, width, 2), dtype=int)\n",
+    "\n",
+    "c = 0\n",
+    "for row in range(height):\n",
+    "    for col in range(width):\n",
+    "        grid[row, col, 0] = c\n",
+    "        grid[row, col, 1] = c + 1\n",
+    "        c += 2\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def breed_rabbits(map):\n",
+    "    animal_index = 0\n",
+    "    map[:,:,animal_index] += map[:,:,animal_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[  0,   1],\n",
+       "        [ 16,   3],\n",
+       "        [ 32,   5],\n",
+       "        [ 48,   7]],\n",
+       "\n",
+       "       [[ 64,   9],\n",
+       "        [ 80,  11],\n",
+       "        [ 96,  13],\n",
+       "        [112,  15]],\n",
+       "\n",
+       "       [[128,  17],\n",
+       "        [144,  19],\n",
+       "        [160,  21],\n",
+       "        [176,  23]]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#grid[:,:,1] += grid[:,:,1]\n",
+    "breed_rabbits(grid)\n",
+    "grid"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## foxes_hunt_and_breed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 0]],\n",
+       "\n",
+       "       [[2, 1],\n",
+       "        [0, 3]],\n",
+       "\n",
+       "       [[3, 3],\n",
+       "        [3, 5]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [row, column, [rabbits, foxes]]\n",
+    "width = 2\n",
+    "height = 3\n",
+    "\n",
+    "grid = np.zeros((height, width, 2), dtype=int)\n",
+    "\n",
+    "grid[0,0,0] = 1\n",
+    "grid[0,0,1] = 2\n",
+    "\n",
+    "grid[0,1,0] = 3\n",
+    "grid[0,1,1] = 0\n",
+    "\n",
+    "grid[1,0,0] = 2\n",
+    "grid[1,0,1] = 1\n",
+    "\n",
+    "grid[1,1,0] = 0\n",
+    "grid[1,1,1] = 3\n",
+    "\n",
+    "grid[2,0,0] = 3\n",
+    "grid[2,0,1] = 3\n",
+    "\n",
+    "grid[2,1,0] = 3\n",
+    "grid[2,1,1] = 5\n",
+    "\n",
+    "grid "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 0]],\n",
+       "\n",
+       "       [[2, 1],\n",
+       "        [0, 3]],\n",
+       "\n",
+       "       [[3, 3],\n",
+       "        [3, 5]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(\n",
+    "    [[[1,2], [3,0]],\n",
+    "    [[2,1], [0,3]],\n",
+    "    [[3,3], [3,5]]] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 3],\n",
+       "        [3, 0]],\n",
+       "\n",
+       "       [[1, 2],\n",
+       "        [0, 3]],\n",
+       "\n",
+       "       [[0, 6],\n",
+       "        [0, 8]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foxes_hunt_and_breed(map):\n",
+    "    for r in range(map.shape[0]):\n",
+    "        for c in range(map.shape[1]):\n",
+    "            if (map[r,c,:] == 0).any():\n",
+    "                continue\n",
+    "            else:\n",
+    "                hunted_rabbits = np.min( map[r,c,:] )\n",
+    "                map[r, c, 0] -= hunted_rabbits\n",
+    "                map[r, c, 1] += hunted_rabbits\n",
+    "    return map\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foxes_hunt_and_breed(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [1, 0],\n",
+       "       [2, 2]])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = np.zeros(grid.shape[:2], dtype=int)\n",
+    "m1[0,1] = 1\n",
+    "m1[1,0] = 1\n",
+    "m1[2,0] = 2\n",
+    "m1[2,1] = 2\n",
+    "\n",
+    "m1\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## evolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +945,7 @@
        "        [0, 0]]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,34 +988,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Click  (140, 115) Grid coordinates:  3 4\n",
-      "Click  (240, 171) Grid coordinates:  4 6\n",
-      "Click  (165, 239) Grid coordinates:  6 4\n",
-      "Click  (101, 153) Grid coordinates:  4 2\n",
-      "Click  (230, 71) Grid coordinates:  2 6\n",
-      "Click  (337, 287) Grid coordinates:  8 9\n",
-      "Click  (151, 326) Grid coordinates:  9 4\n",
-      "Click  (96, 180) Grid coordinates:  5 2\n",
-      "Click  (57, 249) Grid coordinates:  7 1\n",
-      "Click  (148, 274) Grid coordinates:  7 4\n",
-      "Click  (204, 236) Grid coordinates:  6 5\n",
-      "Click  (283, 146) Grid coordinates:  4 8\n",
-      "Click  (175, 90) Grid coordinates:  2 5\n",
-      "Click  (41, 147) Grid coordinates:  4 1\n",
-      "Click  (107, 230) Grid coordinates:  6 3\n",
-      "Click  (188, 223) Grid coordinates:  6 5\n",
-      "Click  (259, 213) Grid coordinates:  6 7\n",
-      "Click  (327, 328) Grid coordinates:  9 9\n",
-      "Click  (34, 25) Grid coordinates:  0 0\n",
-      "Click  (105, 98) Grid coordinates:  2 3\n",
-      "Click  (86, 93) Grid coordinates:  2 2\n"
+      "Click  (96, 117) Grid coordinates:  3 2\n",
+      "Click  (231, 209) Grid coordinates:  5 6\n",
+      "Click  (99, 272) Grid coordinates:  7 2\n",
+      "Click  (183, 137) Grid coordinates:  3 5\n",
+      "Click  (256, 347) Grid coordinates:  9 7\n",
+      "Click  (290, 36) Grid coordinates:  1 8\n"
      ]
     }
    ],
