--- a/testing.ipynb
+++ b/testing.ipynb
@@ -29,14 +29,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -50,58 +42,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Strategies"
+    "# Strategies"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## hunting_1()"
+    "## clockwise_escape()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed tests: \n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# 0 1 2\n",
     "# 7   3\n",
     "# 6 5 4\n",
-    "r = [0, 0, 2, 0, 0, 0, 0, 1]\n",
-    "test_hunting_1_1 = raf.hunting_1(r, 0, True, False) == 3\n",
-    "tests[\"test_hunting_1_0\"] = test_hunting_1_1\n",
+    "foxes_around = [0, 0, 1, 1, 3, 1, 0, 0]\n",
+    "tests[\"clockwise_escape_0\"] = ( raf.\n",
+    "    clockwise_escape(foxes_around , 7, False) == 7 )\n",
     "\n",
-    "r = [0, 0, 2, 0, 0, 0, 0, 1]\n",
-    "test_hunting_1_2 = raf.hunting_1(r, 2, True, True) == 3\n",
-    "tests[\"test_hunting_1_1\"] = test_hunting_1_2\n",
+    "foxes_around = [0, 0, 1, 1, 3, 1, 0, 0]\n",
+    "tests[\"clockwise_escape_1\"] = ( raf.\n",
+    "    clockwise_escape(foxes_around , 5, False) == 0 )\n",
     "\n",
-    "r = [0, 0, 0, 1, 0, 0, 0, 3]\n",
-    "test_hunting_1_3 = raf.hunting_1(r, 5, False, True) == 5\n",
-    "tests[\"test_hunting_1_2\"] = test_hunting_1_3"
+    "foxes_around = [10, 0, 1, 1, 3, 1, 0, 2]\n",
+    "tests[\"clockwise_escape_2\"] = ( raf.\n",
+    "    clockwise_escape(foxes_around , 5, False) == 1 )\n",
+    "\n",
+    "foxes_around = [10, 0, 1, 1, 3, 1, 0, 2]\n",
+    "tests[\"clockwise_escape_2\"] = ( raf.\n",
+    "    clockwise_escape(foxes_around , 5, False) == 1 )\n",
+    "\n",
+    "false_keys = filter(lambda items: not items[1], tests.items())\n",
+    "print(\"Failed tests: \")\n",
+    "print([key for key, value in false_keys])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## chasing_1()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0 1 2\n",
+    "# 7   3\n",
+    "# 6 5 4\n",
+    "rabbits_around = [0, 0, 2, 0, 0, 0, 0, 1]\n",
+    "chasing_1_1 = raf.chasing_1(rabbits_around, 0, True, False) == 3\n",
+    "tests[\"chasing_1_0\"] = chasing_1_1\n",
+    "\n",
+    "rabbits_around = [0, 0, 2, 0, 0, 0, 0, 1]\n",
+    "chasing_1_2 = raf.chasing_1(rabbits_around, 2, True, True) == 3\n",
+    "tests[\"chasing_1_1\"] = chasing_1_2\n",
+    "\n",
+    "rabbits_around = [0, 0, 0, 1, 0, 0, 0, 3]\n",
+    "chasing_1_3 = raf.chasing_1(rabbits_around, 5, False, True) == 5\n",
+    "tests[\"chasing_1_2\"] = chasing_1_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_hunting_1_0: True\n",
-      "test_hunting_1_1: True\n",
-      "test_hunting_1_2: True\n"
+      "clockwise_escape_0: True\n",
+      "clockwise_escape_1: True\n",
+      "clockwise_escape_2: True\n",
+      "chasing_1_0: True\n",
+      "chasing_1_1: True\n",
+      "chasing_1_2: True\n"
      ]
     }
    ],
@@ -120,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +177,7 @@
        "        [0, 0]]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +282,7 @@
        "        [22, 23]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +340,172 @@
     "print(\"Failed tests: \")\n",
     "print([key for key, value in false_keys])\n",
     "# tests\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evolution"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## breed_rabbits()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## foxes_hunt_and_breed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 0]],\n",
+       "\n",
+       "       [[2, 1],\n",
+       "        [0, 3]],\n",
+       "\n",
+       "       [[3, 3],\n",
+       "        [3, 5]]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = np.array(\n",
+    "    [[[1,2], [3,0]],\n",
+    "    [[2,1], [0,3]],\n",
+    "    [[3,3], [3,5]]] )\n",
+    "\n",
+    "grid\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 3],\n",
+       "        [3, 0]],\n",
+       "\n",
+       "       [[1, 2],\n",
+       "        [0, 3]],\n",
+       "\n",
+       "       [[0, 6],\n",
+       "        [0, 8]]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raf.foxes_hunt_and_breed(grid)\n",
+    "#grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = np.array(\n",
+    "    [[[1,2], [3,0]],\n",
+    "    [[2,1], [0,3]],\n",
+    "    [[3,3], [3,5]]] )\n",
+    "tests[\"foxes_hunt_and_breed_0\"] = (raf.foxes_hunt_and_breed(grid) \n",
+    "    == np.array([[[0,3], [3,0]],\n",
+    "    [[1, 2], [0,3]],\n",
+    "    [[0,6], [0,8]]]) ).all()\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed tests: \n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "false_keys = filter(lambda items: not items[1], tests.items())\n",
+    "print(\"Failed tests: \")\n",
+    "print([key for key, value in false_keys])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'clockwise_escape_0': True,\n",
+       " 'clockwise_escape_1': True,\n",
+       " 'clockwise_escape_2': True,\n",
+       " 'chasing_1_0': True,\n",
+       " 'chasing_1_1': True,\n",
+       " 'chasing_1_2': True,\n",
+       " 'valid_postion_0': True,\n",
+       " 'valid_postion_1': True,\n",
+       " 'valid_postion_2': True,\n",
+       " 'valid_postion_3': True,\n",
+       " 'valid_postion_4': True,\n",
+       " 'valid_postion_5': True,\n",
+       " 'valid_postion_6': True,\n",
+       " 'valid_postion_7': True,\n",
+       " 'valid_postion_8': True,\n",
+       " 'get_animals_around_0': True,\n",
+       " 'get_animals_around_1': True,\n",
+       " 'foxes_hunt_and_breed_0': True}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tests"
    ]
   }
  ],
