Map.move_animals() method created

--- a/classes.ipynb
+++ b/classes.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.3.dev8 (SDL 2.26.2, Python 3.11.0)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nbimporter\n",
     "import rabbits_and_foxes as raf"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +74,16 @@
     "    def get_strategy(self):\n",
     "        return self.strategy\n",
     "\n",
-    "    def move(self, foxes_map = None, rabbits_map = None):\n",
+    "    def move(self, rabbits_around = None, foxes_around = None):\n",
     "        if self.strategy == \"random\":\n",
     "            dir = raf.random_movement()\n",
     "\n",
     "        elif self.strategy == \"clockwise_escape\":\n",
-    "            dir = raf.clockwise_escape(foxes_map,\n",
+    "            dir = raf.clockwise_escape(foxes_around,\n",
     "                self.preferred_direction, self.clockwise)\n",
     "\n",
     "        elif self.strategy == \"chasing_1\":\n",
-    "            dir = raf.chasing_1(rabbits_map, self.preferred_direction,\n",
+    "            dir = raf.chasing_1(rabbits_around, self.preferred_direction,\n",
     "                self.clockwise, self.diagonal_prediction)\n",
     "        else:\n",
     "            raise ValueError(\"invalid strategy\")\n",
@@ -134,26 +125,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "rabbit_1 = Animal(1, 1, 1, \"rabbit\", \"random\")"
+    "rabbit_1 = Animal(1, 3, \"rabbit\", \"random\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 1)"
+       "'rabbit'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rabbit_1.species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +195,7 @@
     "        self.population_map = np.zeros((self.rows, self.cols, 2), dtype = int)\n",
     "\n",
     "        self.objects_map = [[[[], []] for i in range(self.cols)] for j in range(self.rows)]\n",
+    "        self.temporal_objects_map = [[[[], []] for i in range(self.cols)] for j in range(self.rows)]\n",
     "\n",
     "        self.hunt_log_map = np.zeros((self.rows, self.cols), dtype = int)\n",
     "\n",
@@ -203,6 +215,11 @@
     "        preferred_direction = None, clockwise = True,\n",
     "        diagonal_prediction = False):\n",
     "\n",
+    "        self.population_map = np.zeros((self.rows, self.cols, 2), dtype = int)\n",
+    "        self.objects_map = [[[[], []] for i in range(self.cols)] for j in range(self.rows)]\n",
+    "        # self.temporal_objects_map = [[[[], []] for i in range(self.cols)] for j in range(self.rows)]\n",
+    "        self.hunt_log_map = np.zeros((self.rows, self.cols), dtype = int)\n",
+    "\n",
     "        if not (species == \"rabbit\" or species == \"fox\"):\n",
     "            raise ValueError(\"invalid animal species\")\n",
     "\n",
@@ -217,6 +234,33 @@
     "            self.population_map[row, col, animal_index] += 1\n",
     "            self.objects_map[row, col, animal_index].append(Animal(row, col,\n",
     "                species, strategy, preferred_direction, clockwise, diagonal_prediction))\n",
+    "\n",
+    "    def move_animals(self):\n",
+    "\n",
+    "        temporal_objects_map = self.objects_map.copy()\n",
+    "        self.objects_map = [[[[], []] for i in range(self.cols)] for j in range(self.rows)]\n",
+    "        temporal_population_map = self.population_map.copy()\n",
+    "        self.population_map = np.zeros((self.rows, self.cols, 2), dtype = int)\n",
+    "\n",
+    "        for i in range(self.rows):\n",
+    "            for j in range(self.cols):\n",
+    "                for animal_index in range(2):\n",
+    "                    for animal in self.objects_map[i, j, animal_index]:\n",
+    "                        rabbits_around = None\n",
+    "                        foxes_around = None\n",
+    "                        if animal.species == \"rabbit\":\n",
+    "                            if animal_index != 0:\n",
+    "                                raise ValueError(\"invalid animal index\")\n",
+    "                            foxes_around = raf.get_animals_around(temporal_population_map, i, j, animal.species)\n",
+    "                        elif animal.species == \"fox\":\n",
+    "                            if animal_index != 1:\n",
+    "                                raise ValueError(\"invalid animal index\")\n",
+    "                            rabbits_around = raf.get_animals_around(temporal_population_map, i, j, animal.species)\n",
+    "                        animal.move(rabbits_around, foxes_around)\n",
+    "                        self.objects_map[animal.row, animal.col, animal_index].append(animal)\n",
+    "                        self.population_map[animal.row, animal.col, animal_index] += 1\n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "    "
