initial population graphics working

--- a/graphics.ipynb
+++ b/graphics.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "np.random.seed(1234)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -26,53 +16,24 @@
    ],
    "source": [
     "import numpy as np\n",
+    "np.random.seed(1234)\n",
     "import pygame\n",
     "# pygame.init()"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Graphics"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pygame.display.init()"
+    "import nbimporter\n",
+    "import classes as cl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BLACK = (0, 0, 0)\n",
-    "WHITE = (255, 255, 255)\n",
-    "RED = (255, 0, 0)\n",
-    "GREEN = (0, 255, 0)\n",
-    "BLUE = (0, 0, 255)\n",
-    "\n",
-    "# For each cell:\n",
-    "WIDTH = 30\n",
-    "HEIGHT = 30\n",
-    "\n",
-    "MARGIN = 5\n",
-    "\n",
-    "# For the grid:\n",
-    "ROWS = 10\n",
-    "COLUMNS = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -80,18 +41,7 @@
       "text/plain": [
        "array([[[0, 0],\n",
        "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0]],\n",
-       "\n",
-       "       [[0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
+       "        [1, 0],\n",
        "        [0, 0],\n",
        "        [0, 0],\n",
        "        [0, 0],\n",
@@ -122,6 +72,17 @@
        "        [0, 0],\n",
        "        [0, 0]],\n",
        "\n",
+       "       [[1, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0]],\n",
+       "\n",
        "       [[0, 0],\n",
        "        [0, 0],\n",
        "        [0, 0],\n",
@@ -145,7 +106,7 @@
        "        [0, 0]],\n",
        "\n",
        "       [[0, 0],\n",
-       "        [0, 0],\n",
+       "        [1, 0],\n",
        "        [0, 0],\n",
        "        [0, 0],\n",
        "        [0, 0],\n",
@@ -189,21 +150,97 @@
        "        [0, 0]]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = cl.Map(10, 10)\n",
+    "m1.populate(5, \"rabbit\", \"random\")\n",
+    "m1.get_population_map()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graphics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pygame.display.init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BLACK = (0, 0, 0)\n",
+    "WHITE = (255, 255, 255)\n",
+    "RED = (255, 0, 0)\n",
+    "GREEN = (0, 255, 0)\n",
+    "BLUE = (0, 0, 255)\n",
+    "\n",
+    "# For each cell:\n",
+    "WIDTH = 30\n",
+    "HEIGHT = 30\n",
+    "\n",
+    "MARGIN = 5\n",
+    "\n",
+    "# For the grid:\n",
+    "ROWS = 10\n",
+    "COLUMNS = 10\n",
+    "\n",
+    "# MAP CONSTANTS \n",
+    "INITIAL_RABBIT_POPULATION = 5\n",
+    "INITIAL_FOX_POPULATION = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = cl.Map(ROWS, COLUMNS)\n",
+    "m1.populate(INITIAL_RABBIT_POPULATION, \"rabbit\", \"random\")\n",
+    "m1.populate(INITIAL_FOX_POPULATION, \"fox\", \"random\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 10, 2)"
+      ]
+     },
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# [row, column, [rabbits, foxes]]\n",
-    "\n",
-    "grid = np.zeros((ROWS, COLUMNS, 2), dtype=int)\n",
-    "grid"
+    "grid = m1.get_population_map()\n",
+    "grid.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,28 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Click  (72, 59) Grid coordinates:  1 2\n",
-      "Click  (203, 123) Grid coordinates:  3 5\n",
-      "Click  (89, 250) Grid coordinates:  7 2\n",
-      "Click  (248, 320) Grid coordinates:  9 7\n",
-      "Click  (286, 184) Grid coordinates:  5 8\n",
-      "Click  (132, 174) Grid coordinates:  4 3\n",
-      "Click  (184, 226) Grid coordinates:  6 5\n",
-      "Click  (136, 329) Grid coordinates:  9 3\n",
-      "Click  (67, 187) Grid coordinates:  5 1\n",
-      "Click  (313, 346) Grid coordinates:  9 8\n",
-      "Click  (334, 340) Grid coordinates:  9 9\n",
-      "Click  (332, 283) Grid coordinates:  8 9\n",
-      "Click  (330, 240) Grid coordinates:  6 9\n",
-      "Click  (330, 212) Grid coordinates:  6 9\n",
-      "Click  (320, 165) Grid coordinates:  4 9\n"
+      "Click  (263, 231) Grid coordinates:  6 7\n",
+      "Click  (263, 231) Grid coordinates:  6 7\n",
+      "Click  (262, 270) Grid coordinates:  7 7\n",
+      "Click  (280, 315) Grid coordinates:  9 8\n",
+      "Click  (297, 303) Grid coordinates:  8 8\n",
+      "Click  (213, 275) Grid coordinates:  7 6\n",
+      "Click  (202, 242) Grid coordinates:  6 5\n",
+      "Click  (202, 238) Grid coordinates:  6 5\n",
+      "Click  (202, 238) Grid coordinates:  6 5\n",
+      "Click  (202, 238) Grid coordinates:  6 5\n",
+      "Click  (204, 186) Grid coordinates:  5 5\n",
+      "Click  (251, 56) Grid coordinates:  1 7\n"
      ]
     }
    ],
@@ -277,8 +311,10 @@
     "    for row in range(ROWS):\n",
     "        for column in range(COLUMNS):\n",
     "            color = WHITE\n",
-    "            if grid[row, column, 0] == 1:\n",
-    "                color = GREEN\n",
+    "            if grid[row, column, 0] >= 1:\n",
+    "                color = BLUE\n",
+    "            if grid[row, column, 1] >= 1:\n",
+    "                color = RED\n",
     "            pygame.draw.rect(screen,\n",
     "                             color,\n",
     "                             [(MARGIN + WIDTH) * column + MARGIN,\n",
@@ -287,13 +323,13 @@
     "                              HEIGHT])\n",
     "            \n",
     "            # render text onto a surface\n",
-    "            text_rabbits = font.render(f\"C: {8}\", True, (0, 0, 0))\n",
+    "            text_rabbits = font.render(f\"C: {grid[row, column, 0]}\", True, (0, 0, 0))\n",
     "            # blit the surface onto the screen\n",
     "            screen.blit(text_rabbits, [(MARGIN + WIDTH) * column \n",
     "                + MARGIN , (MARGIN + HEIGHT) \n",
     "                * row + MARGIN ])\n",
     "\n",
-    "            text_foxes = font.render(f\"Z: {5}\", True, (0, 0, 0))\n",
+    "            text_foxes = font.render(f\"Z: {grid[row, column, 1]}\", True, (0, 0, 0))\n",
     "            # blit the surface onto the screen\n",
     "            screen.blit(text_foxes, [(MARGIN + WIDTH) * column \n",
     "                + MARGIN , (MARGIN + HEIGHT) \n",
