--- a/testing.ipynb
+++ b/testing.ipynb
@@ -4,19 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.3.dev8 (SDL 2.26.2, Python 3.11.0)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nbimporter\n",
-    "import rabbits_and_foxes as raf"
+    "import classes as cl"
    ]
   },
   {
@@ -347,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evolution"
+    "# Classes"
    ]
   },
   {
@@ -355,98 +346,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## breed_rabbits()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## foxes_hunt_and_breed()"
+    "## Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1, 2],\n",
+       "array([[[0, 0],\n",
+       "        [2, 0],\n",
        "        [3, 0]],\n",
        "\n",
-       "       [[2, 1],\n",
-       "        [0, 3]],\n",
+       "       [[0, 0],\n",
+       "        [1, 0],\n",
+       "        [1, 0]],\n",
        "\n",
-       "       [[3, 3],\n",
-       "        [3, 5]]])"
+       "       [[0, 0],\n",
+       "        [2, 0],\n",
+       "        [1, 0]]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grid = np.array(\n",
-    "    [[[1,2], [3,0]],\n",
-    "    [[2,1], [0,3]],\n",
-    "    [[3,3], [3,5]]] )\n",
-    "\n",
-    "grid\n"
+    "m1 = cl.Map(3, 3)\n",
+    "m1.populate(10, \"rabbit\", \"random\")\n",
+    "m1.get_population_map()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[0, 3],\n",
-       "        [3, 0]],\n",
-       "\n",
-       "       [[1, 2],\n",
-       "        [0, 3]],\n",
-       "\n",
-       "       [[0, 6],\n",
-       "        [0, 8]]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raf.foxes_hunt_and_breed(grid)\n",
-    "#grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = np.array(\n",
-    "    [[[1,2], [3,0]],\n",
-    "    [[2,1], [0,3]],\n",
-    "    [[3,3], [3,5]]] )\n",
-    "tests[\"foxes_hunt_and_breed_0\"] = (raf.foxes_hunt_and_breed(grid) \n",
-    "    == np.array([[[0,3], [3,0]],\n",
-    "    [[1, 2], [0,3]],\n",
-    "    [[0,6], [0,8]]]) ).all()\n",
-    "\n",
-    "    "
+    "m1 = cl.Map(3, 3)\n",
+    "m1.populate(10, \"rabbit\", \"random\")\n",
+    "m1.reproduction(\"rabbit\")\n",
+    "m1.get_population_map()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -462,50 +411,6 @@
     "false_keys = filter(lambda items: not items[1], tests.items())\n",
     "print(\"Failed tests: \")\n",
     "print([key for key, value in false_keys])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'clockwise_escape_0': True,\n",
-       " 'clockwise_escape_1': True,\n",
-       " 'clockwise_escape_2': True,\n",
-       " 'chasing_1_0': True,\n",
-       " 'chasing_1_1': True,\n",
-       " 'chasing_1_2': True,\n",
-       " 'valid_postion_0': True,\n",
-       " 'valid_postion_1': True,\n",
-       " 'valid_postion_2': True,\n",
-       " 'valid_postion_3': True,\n",
-       " 'valid_postion_4': True,\n",
-       " 'valid_postion_5': True,\n",
-       " 'valid_postion_6': True,\n",
-       " 'valid_postion_7': True,\n",
-       " 'valid_postion_8': True,\n",
-       " 'get_animals_around_0': True,\n",
-       " 'get_animals_around_1': True,\n",
-       " 'foxes_hunt_and_breed_0': True}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tests"
    ]
   }
  ],
