--- a/graphics.ipynb
+++ b/graphics.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.3.dev8 (SDL 2.26.2, Python 3.11.0)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "np.random.seed(1234)\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +82,7 @@
    ],
    "source": [
     "# Valid strategies:\n",
-    "(\"random\", \"clockwise_escape\", \"chasing_1\")"
+    "# (\"random\", \"clockwise_escape\", \"chasing_1\")"
    ]
   },
   {
